fix bug with squished picture of me

--- a/braden-walker-portfolio/src/styles/css/index.css
+++ b/braden-walker-portfolio/src/styles/css/index.css
@@ -39,6 +39,7 @@ html {
 #craft .top-layer {
   -webkit-transform: translateZ(0.02px) scale(0.98);
   transform: translateZ(0.02px) scale(0.98);
+  z-index: 1;
 }
 #craft .middle-layer {
   -webkit-transform: translateZ(0px) scale(1);
@@ -47,6 +48,7 @@ html {
 #craft .lower-layer {
   -webkit-transform: translateZ(-0.08px) scale(1.08);
   transform: translateZ(-0.08px) scale(1.08);
+  z-index: -1;
 }
 .app {
   font-family: 'Raleway', sans-serif;
@@ -483,6 +485,8 @@ html {
 .landing-container .landing-cutout .parallax-layer--back {
   -webkit-transform: translateZ(-0.08px) scale(1.08);
   transform: translateZ(-0.08px) scale(1.08);
+  z-index: -1;
+  z-index: 0;
   text-align: center;
 }
 .landing-container .landing-cutout .parallax-layer--back .name {
@@ -654,6 +658,7 @@ html {
 .about-container .about-banner .about-sticker {
   -webkit-transform: translateZ(0.02px) scale(0.98);
   transform: translateZ(0.02px) scale(0.98);
+  z-index: 1;
   border-radius: 2px;
   padding: 5px;
   width: 180px;
@@ -698,11 +703,12 @@ html {
   display: flex;
 }
 .about-container .about-content-container .about-content-cutout {
-  display: flex;
-  margin: 80px;
-  padding: 40px;
   box-shadow: inset 5px 5px 10px rgba(0, 0, 0, 0.5);
   border-radius: 2px;
+  display: flex;
+  height: 300px;
+  margin: 80px;
+  padding: 40px;
   overflow: hidden;
   margin-left: 200px;
 }
@@ -713,12 +719,15 @@ html {
 }
 @media (max-width: 900px) {
   .about-container .about-content-container .about-content-cutout {
+    height: 200px;
     margin: 50px 20px 0;
     padding: 20px;
   }
 }
 @media (max-width: 600px) {
   .about-container .about-content-container .about-content-cutout {
+    height: auto;
+    width: 350px;
     margin: 50px 20px 0;
     padding: 20px;
     flex-flow: column;
@@ -729,15 +738,23 @@ html {
   -webkit-transform: translateZ(0px) scale(1);
   transform: translateZ(0px) scale(1);
   z-index: 1;
-  width: 250px;
-  height: 250px;
+  width: auto;
+  max-width: 219px;
+  height: 100%;
   border-radius: 2px;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 @media (max-width: 900px) {
   .about-container .about-content-container .about-content-cutout img {
-    width: 200px;
-    height: 200px;
+    width: auto;
+    max-width: 219px;
+  }
+}
+@media (max-width: 600px) {
+  .about-container .about-content-container .about-content-cutout img {
+    width: 100%;
+    height: auto;
+    max-height: 219px;
   }
 }
 .about-container .about-content-container .about-content-cutout .about-and-skills {
@@ -754,7 +771,8 @@ html {
 .about-container .about-content-container .about-content-cutout .about-and-skills .about-me {
   -webkit-transform: translateZ(-0.08px) scale(1.08);
   transform: translateZ(-0.08px) scale(1.08);
-  font-size: 2rem;
+  z-index: -1;
+  font-size: 1.8rem;
   margin: -10px 0 0 30px;
 }
 @media (max-width: 900px) {
@@ -907,6 +925,7 @@ html {
 .projects-container .projects-banner .projects-sticker {
   -webkit-transform: translateZ(0.02px) scale(0.98);
   transform: translateZ(0.02px) scale(0.98);
+  z-index: 1;
   border-radius: 2px;
   padding: 5px;
   width: 250px;
@@ -944,4 +963,49 @@ html {
   .projects-container .projects-banner .projects-sticker .parallax-layer--front .name {
     font-size: 40px;
   }
+}
+.projects-container .projects-content-container {
+  width: 100%;
+  justify-content: center;
+  display: flex;
+}
+.projects-container .projects-content-container .project-cutout {
+  box-shadow: inset 5px 5px 10px rgba(0, 0, 0, 0.5);
+  border-radius: 2px;
+  height: 300px;
+  display: flex;
+  margin: 80px;
+  padding: 40px;
+  overflow: hidden;
+  margin-left: 200px;
+}
+@media (max-width: 1200px) {
+  .projects-container .projects-content-container .project-cutout {
+    margin-left: 80px;
+  }
+}
+@media (max-width: 900px) {
+  .projects-container .projects-content-container .project-cutout {
+    margin: 50px 20px 0;
+    padding: 20px;
+  }
+}
+@media (max-width: 600px) {
+  .projects-container .projects-content-container .project-cutout {
+    margin: 50px 20px 0;
+    padding: 20px;
+    flex-flow: column;
+    align-items: center;
+  }
+}
+.projects-container .projects-content-container .project-cutout img {
+  height: 100%;
+  width: auto;
+  -webkit-transform: translateZ(-0.08px) scale(1.08);
+  transform: translateZ(-0.08px) scale(1.08);
+  z-index: -1;
+}
+.projects-container .projects-content-container .project-cutout .text {
+  display: flex;
+  flex-direction: column;
 }
