--- a/braden-walker-portfolio/src/styles/less/landing.less
+++ b/braden-walker-portfolio/src/styles/less/landing.less
@@ -104,6 +104,7 @@
     
         .parallax-layer--back {
             #craft > .lower-layer;
+            z-index: 0;
             text-align: center;
     
             .name {
