--- a/braden-walker-portfolio/src/styles/less/projects.less
+++ b/braden-walker-portfolio/src/styles/less/projects.less
@@ -150,4 +150,48 @@
     
     }
 
+    .projects-content-container {
+        width: 100%;
+        justify-content: center;
+        display: flex;
+
+        .project-cutout {
+            #craft > .cutout;
+            height: 300px;
+            display: flex;
+            margin: 80px;
+            padding: 40px;
+            overflow: hidden;
+            
+            margin-left: 200px;
+
+            @media @desktop {
+                margin-left: 80px;
+            }
+
+            @media @tablet {
+                margin: 50px 20px 0;
+                padding: 20px;
+            }
+
+            @media @phone {
+                margin: 50px 20px 0;
+                padding: 20px;
+                flex-flow: column;
+                align-items: center;
+            }
+
+            img {
+                height: 100%;
+                width: auto;
+                #craft > .lower-layer;
+            }
+
+            .text {
+                display: flex;
+                flex-direction: column;
+            }
+        }
+    }
+
 }
